# P-Mono

./: .gitignore  .gitmodules  P-Mono.sln  P.sln  P.userprefs  README.md  p-mono.props
Bld/Drops/Release/x86/Binaries/: CParser.dll.mdb  ZingParser.dll.mdb
Ext/Formula/: .gitignore
Ext/Formula/x64/: Core.dll.mdb  FormulaCodeGeneratorTask.dll.mdb
Ext/Formula/x86/: Core.dll.mdb  FormulaCodeGeneratorTask.dll.mdb
Src/: CMakeLists.txt
Src/PVisualizer/: PVisualizer.csproj  PVisualizer.userprefs
Src/Parsers/CParser/: CParser.csproj  CParser.userprefs
Src/Parsers/ZingParser/: ZingParser.csproj
Src/Pc/: CommandLine.csproj  Compiler.csproj  Pc.sln  Pc.userprefs  parser.conflicts
Src/Pc/CommandLine/: CommandLine.csproj  CommandLine.sln  CommandLine.userprefs
Src/Pc/Compiler/: Compiler.csproj  Compiler.sln  Compiler.userprefs  parser.conflicts
Src/Pc/InteractiveCommandLine/: InteractiveCommandLine.csproj  InteractiveCommandLine.sln  InteractiveCommandLine.userprefs
Src/Prt/: CMakeLists.txt
Src/Prt/IDL/: PrtIDL.vcxproj
Src/Prt/LinuxUser/: PrtLinuxUser.c  PrtLinuxUser.h  PrtLinuxUserConfig.c  PrtLinuxUserConfig.h  ext_compat.h
Src/Prt/Samples/ForeignTypes/: ForeignTypes.vcxproj
Src/Prt/Samples/ModelFnAndMachines/: ModelFnAndMachines.vcxproj
Src/PrtDist/: PrtWinUser.vcxproj
Src/PrtDist/Core/: PrtDist.vcxproj
Src/PrtDist/Deployer/: Deployer.csproj
Src/PrtDist/NodeManager/: NodeManager.vcxproj
Src/PrtDist/Samples/PingPong/: PingPong.vcxproj
Src/PrtDist/Samples/PingPongSimple/: PingPongSimple.vcxproj
Src/PrtDist/Samples/TechFest2015-Demo/: FailureDetector.vcxproj
Src/PrtTest/: CMakeLists.txt
Src/PrtTest/Core/: PrtExecution.c  PrtTestRuntime.cpp  PrtTestRuntime.h
